[MOSIP-8293] updated test cases